[metadata]
name = torch_utils
version = attr: torch_utils.__version__
author = attr: torch_utils.__author__
author_email = attr: torch_utils.__author_email__
maintainer = attr: torch_utils.__author__
maintainer_email = attr: torch_utils.__author_email__
description = This is my own utility package for PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: torch_utils.__url__
license = attr: torch_utils.__license__
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
packages = find_packages(exclude=["examples", "tests"])
install_requires =
    torch
    numpy
    pandas
    matplotlib
    scikit-learn
# project_urls={
#     "Documentation": "https://yu9824.github.io/ternary_diagram/",
#     "Source": url,
#     "Tracker": "{}/issues".format(url),
#     "PyPI": "https://pypi.org/project/ternary-diagram/",
# },
keywords="pytorch torch deep-learning machine-learning"
